<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>protobot_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>Assets and Launch files for Gazebo simulation of the protobot</description>
  <maintainer email="arthurlovekin@gmail.com">arthur</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Automatically adds the worlds directory the GZ_SIM_RESOURCE_PATH so that Gazebo can find the models. ${prefix} refers to the package's share path -->
    <gazebo_ros gazebo_model_path="${prefix}/worlds"/>
  </export>
</package>
